# vmpacking

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format.sh  instances-explanation.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
examples/: basic_example.cpp
generators/: README.md  gen_general.py
scripts/: README.md
src/: CMakeLists.txt  vmp_clustertreeinstance.cpp  vmp_clustertreeinstance.h  vmp_clustertreeinstancebuilder.cpp  vmp_clustertreeinstancebuilder.h  vmp_clustertreetopology.h  vmp_commontypes.h  vmp_generalinstance.cpp  vmp_generalinstance.h  vmp_guest.cpp  vmp_guest.h  vmp_host.cpp  vmp_host.h  vmp_maximisers.cpp  vmp_maximisers.h  vmp_packing.cpp  vmp_packing.h  vmp_solvers.h  vmp_solverutils.cpp  vmp_solverutils.h  vmp_treeinstance.cpp  vmp_treeinstance.h  vmp_treeinstancebuilder.cpp  vmp_treeinstancebuilder.h  vmp_treetopology.cpp  vmp_treetopology.h
src/instances/: CMakeLists.txt  vmp_clustertreebuilder.cpp  vmp_clustertreebuilder.h  vmp_clustertreetopology.cpp  vmp_clustertreetopology.h  vmp_generaltopology.cpp  vmp_generaltopology.h  vmp_instance.h  vmp_treebuilder.cpp  vmp_treebuilder.h  vmp_treetopology.h
src/loaders/: CMakeLists.txt  vmp_clustertreeloader.cpp  vmp_clustertreeloader.h  vmp_instanceloader.cpp  vmp_instanceloader.h  vmp_treeloader.cpp  vmp_treeloader.h
src/parsers/: CMakeLists.txt  vmp_clustertreeinstanceparser.cpp  vmp_clustertreeinstanceparser.h  vmp_clustertreeparser.cpp  vmp_clustertreeparser.h  vmp_generalinstanceparser.cpp  vmp_generalinstanceparser.h  vmp_generalparser.cpp  vmp_generalparser.h  vmp_instanceparser.cpp  vmp_instanceparser.h  vmp_treeinstanceparser.cpp  vmp_treeinstanceparser.h  vmp_treeparser.cpp  vmp_treeparser.h
src/topology/: CMakeLists.txt  vmp_clustertree.cpp  vmp_clustertree.h  vmp_clustertreebuilder.cpp  vmp_clustertreebuilder.h  vmp_instance.cpp  vmp_instance.h  vmp_tree.cpp  vmp_tree.h  vmp_treebuilder.cpp  vmp_treebuilder.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_e2e.cpp
tests/e2e/data/cluster-tree/: cluster-tree_0008.json  cluster-tree_0011.json
tests/e2e/data/general/: general_0008.json  general_0011.json
tests/e2e/data/tree/: tree_0008.json  tree_0011.json
tests/unit/: CMakeLists.txt  TODO.txt  test_clustertree.cpp  test_clustertreeinstance.cpp  test_generalinstance.cpp  test_guest.cpp  test_host.cpp  test_instance.cpp  test_packing.cpp  test_solverutils.cpp  test_tree.cpp  test_treeinstance.cpp
tests/unit/helpers/: instance_builders.h
